# rust-api

./: Cargo.toml  README.md
postman/: collection.json  environment.json
src/: main.rs
src/controllers/: health_controller.rs  user_controller.rs
