[package]
name = "rust-api"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# dependencies specific to Swagger API documentation
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }

# used for data validation
validator = "0.16"
validator_derive = "0.16"
